# lib/api-spec/openapi.yaml
@@ -234,6 +234,9 @@ components:
           type: string
         quantity:
           type: number
+        manualPrice:
+          type: number
+          nullable: true
         createdAt:
           type: string
           format: date-time
@@ -257,6 +260,9 @@ components:
           type: string
         quantity:
           type: number
+        manualPrice:
+          type: number
+          nullable: true
       required:
         - type
         - symbol
@@ -267,6 +273,9 @@ components:
       properties:
         quantity:
           type: number
+        manualPrice:
+          type: number
+          nullable: true
       required:
         - quantity
 
